--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,11 +1,10 @@
 @import "~bulma/sass/utilities/_all.sass";
 @import "~bulma-helpers/bulma-helpers.sass";
 
-// Variables
-//$title-color: $primary;
-//
-//.title {
-//  color: $primary;
-//}
+pre {
+  border-radius: 0.75em;
+  margin-left: 2em !important;
+  margin-right: 2em !important;
+}
 
 @import "~bulma";
