--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,10 +1,33 @@
+@charset "utf-8";
+
+// Import a Google Font
+@import url('https://fonts.googleapis.com/css?family=Muli|Roboto&display=swap');
+
+// Variable overrides
+$family-sans-serif: 'Muli', 'Roboto', sans-serif;
+$body-size: 18px;
+
 @import "~bulma/sass/utilities/_all.sass";
 @import "~bulma-helpers/bulma-helpers.sass";
+
+body {
+  //font-family: $family-sans-serif;
+  font-size: 1.25rem !important;
+}
 
 pre {
   border-radius: 0.75em;
   margin-left: 2em !important;
   margin-right: 2em !important;
+}
+
+.is-divider-title {
+  display: block;
+  position: relative;
+  border-top: 0.2rem solid $primary;
+  height: 0.1rem;
+  margin: 0.3rem 6rem 0.7rem 0;
+  text-align: center;
 }
 
 @import "~bulma";
